--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -2,10 +2,12 @@ _core:
   default_config_hash: 4GIX5Esnc_umpXUBj4IIocRX7Mt5fPhm4AgXfE3E56E
 module:
   block: 0
+  breakpoint: 0
   contextual: 0
   dblog: 0
   dynamic_page_cache: 0
   field: 0
+  field_ui: 0
   file: 0
   filter: 0
   language: 0
@@ -18,10 +20,13 @@ module:
   page_cache: 0
   path_alias: 0
   system: 0
+  taxonomy: 0
   text: 0
+  toolbar: 0
   update: 0
   user: 0
   content_translation: 10
+  views: 10
   minimal: 1000
 theme:
   stark: 0
