--- a/config/sync/core.entity_view_display.node.project.default.yml
+++ b/config/sync/core.entity_view_display.node.project.default.yml
@@ -3,18 +3,36 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.project.field_department
+    - field.field.node.project.field_description
     - node.type.project
   module:
+    - text
     - user
 id: node.project.default
 targetEntityType: node
 bundle: project
 mode: default
 content:
+  field_department:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 2
+    region: content
+  field_description:
+    type: text_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
+    region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 100
+    weight: 0
     region: content
 hidden:
   langcode: true
