--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,15 +1,22 @@
 _core:
   default_config_hash: 4GIX5Esnc_umpXUBj4IIocRX7Mt5fPhm4AgXfE3E56E
 module:
+  ai_screening_group: 0
+  ai_screening_project: 0
   block: 0
   breakpoint: 0
   contextual: 0
   dblog: 0
   dynamic_page_cache: 0
+  entity: 0
   field: 0
   field_ui: 0
   file: 0
   filter: 0
+  flexible_permissions: 0
+  gnode: 0
+  group: 0
+  hux: 0
   language: 0
   layout_builder: 0
   layout_discovery: 0
@@ -17,6 +24,7 @@ module:
   mysql: 0
   navigation: 0
   node: 0
+  options: 0
   page_cache: 0
   path_alias: 0
   system: 0
