--- a/config/sync/navigation.settings.yml
+++ b/config/sync/navigation.settings.yml
@@ -1,6 +1,6 @@
 _core:
   default_config_hash: PSKn7YTSA5E5lD6ULcTIlNiUzxBAbf6dNAKb7HXJhnw
-logo_provider: default
+logo_provider: hide
 logo_managed: null
 logo_max_filesize: 1048576
 logo_height: 40
