--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,13 @@
     ],
     "require": {
         "composer/installers": "^2.0",
+        "cweagans/composer-patches": "^1.7",
         "drupal/core-composer-scaffold": "^11.0",
         "drupal/core-project-message": "^11.0",
         "drupal/core-recommended": "^11.0",
-        "drush/drush": "^13.2",
-        "cweagans/composer-patches": "^1.7"
+        "drupal/group": "^3.3",
+        "drupal/hux": "^1.7",
+        "drush/drush": "^13.2"
     },
     "require-dev": {
       "drupal/core-dev": "^11.0",
