--- a/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
+++ b/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
@@ -4,6 +4,4 @@ services:
     arguments: ['ai_screening_project']
 
   Drupal\ai_screening_project\Helper\Helper:
-    arguments:
-      - '@entity_type.manager'
-      - '@logger.channel.ai_screening_project'
+    autowire: true
