Changed stuff after code review

--- a/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
+++ b/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
@@ -5,3 +5,5 @@ services:
 
   Drupal\ai_screening_project\Helper\Helper:
     autowire: true
+    arguments:
+      $logger:  '@logger.channel.ai_screening_project'
