--- a/web/themes/custom/itkdev/itkdev_base_theme/package.json
+++ b/web/themes/custom/itkdev/itkdev_base_theme/package.json
@@ -12,6 +12,7 @@
     "@symfony/webpack-encore": "^4.6.1",
     "@tailwindcss/forms": "^0.5.7",
     "babel-loader": "^9.1.3",
+    "concurrently": "^9.0.1",
     "eslint": "^9.3.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -30,7 +31,11 @@
     "coding-standards-apply/eslint": "yarn eslint './js/**/*.js' --fix",
     "coding-standards-apply/prettier": "yarn prettier ./js/**/ --write",
     "coding-standards-apply": "yarn coding-standards-apply/prettier && yarn coding-standards-apply/eslint",
-    "build": "yarn encore production --progress && yarn tailwindcss -i styles.css -o build/styles.css --minify",
-    "watch": "yarn encore dev --watch & yarn tailwindcss -i styles.css -o build/styles.css --watch"
+    "build:encore": "yarn encore production --progress",
+    "build:tailwind": "yarn tailwindcss -i css/styles.css -o css/styles.dist.css --minify",
+    "build": "yarn build:encore && yarn build:tailwind",
+    "watch:encore": "yarn encore dev --watch",
+    "watch:tailwind": "yarn tailwindcss -i css/styles.css -o css/styles.dist.css --watch",
+    "watch": "concurrently \"yarn watch:tailwind\" \"yarn watch:encore\" "
   }
 }
