--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -25,6 +25,7 @@ module:
   mysql: 0
   navigation: 0
   node: 0
+  openid_connect: 0
   options: 0
   page_cache: 0
   path_alias: 0
@@ -38,6 +39,7 @@ module:
   webform_submission_log: 0
   webform_ui: 0
   content_translation: 10
+  externalauth: 10
   views: 10
   minimal: 1000
 theme:
