Updated IdP users

--- a/docker-compose.oidc.yml
+++ b/docker-compose.oidc.yml
@@ -78,86 +78,20 @@ services:
         - Name: profile
           ClaimTypes:
             # Add your custom claims here
-            - dk_ssn
             - name
-            - zip
 
       USERS_CONFIGURATION_INLINE: |
-        - SubjectId: 1
-          Username: citizen1
-          Password: citizen1
+        - SubjectId: administrator
+          Username: administrator
+          Password: administrator
           Claims:
             # Claims added here must be defined above in IDENTITY_RESOURCES_INLINE
-          - Type: dk_ssn
-            Value: '1111111111'
-            ValueType: string
           - Type: name
-            Value: 'Anders And'
+            Value: Admin Jensen
             ValueType: string
-          - Type: zip
-            Value: '1111'
+          - Type: email
+            Value: administrator@example.com
             ValueType: string
-
-        - SubjectId: 2
-          Username: citizen2
-          Password: citizen2
-          Claims:
-          - Type: dk_ssn
-            Value: '2222222222'
-            ValueType: string
-          - Type: name
-            Value: 'Bent Betjentsen'
-            ValueType: string
-          - Type: zip
-            Value: '2222'
-            ValueType: string
-
-        - SubjectId: 3
-          Username: citizen3
-          Password: citizen3
-          Claims:
-          - Type: dk_ssn
-            Value: '3333333333'
-            ValueType: string
-          - Type: name
-            Value: 'Carsten Carlsen'
-            ValueType: string
-          - Type: zip
-            Value: '3333'
-            ValueType: string
-
-        - SubjectId: 4
-          Username: citizen4
-          Password: citizen4
-          Claims:
-          - Type: dk_ssn
-            Value: '4444444444'
-            ValueType: string
-          - Type: name
-            Value: 'Dorte Dyhr'
-            ValueType: string
-          - Type: zip
-            Value: '4444'
-            ValueType: string
-
-        - SubjectId: 'ikke-aarhusianer'
-          Username: 'ikke-aarhusianer'
-          Password: 'ikke-aarhusianer'
-          Claims:
-          - Type: dk_ssn
-            Value: '1705880000'
-            ValueType: string
-          - Type: name
-            Value: Troels Bondetest
-            ValueType: string
-
-        - SubjectId: 'aarhusianer'
-          Username: 'aarhusianer'
-          Password: 'aarhusianer'
-          Claims:
-          - Type: dk_ssn
-            Value: '2611740000'
-            ValueType: string
-          - Type: name
-            Value: Betina Henningsentest
-            ValueType: string
+          - Type: groups
+            Value: '["AD-administrator"]'
+            ValueType: json
