--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -14,6 +14,7 @@ module:
   flexible_permissions: 0
   gnode: 0
   group: 0
+  hook_event_dispatcher: 0
   hux: 0
   language: 0
   layout_builder: 0
