--- a/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
+++ b/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
@@ -3,7 +3,9 @@ services:
     parent: logger.channel_base
     arguments: ['ai_screening_project']
 
-  Drupal\ai_screening_project\Helper\Helper:
+  Drupal\ai_screening_project\Helper\ProjectHelper:
     autowire: true
     arguments:
       $logger:  '@logger.channel.ai_screening_project'
+    tags:
+      - { name: event_subscriber }
