Added webform and config

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "drupal/core-recommended": "^11.0",
         "drupal/group": "^3.3",
         "drupal/hux": "^1.7",
+        "drupal/webform": "^6.0@dev",
         "drush/drush": "^13.2"
     },
     "require-dev": {
@@ -35,7 +36,7 @@
             "url": "https://packages.drupal.org/8"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
         "allow-plugins": {
