--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -2,7 +2,10 @@ uuid: 28253337-dde9-44fa-9ce1-9bcbeeb35b45
 langcode: en
 status: true
 dependencies:
+  config:
+    - filter.format.webform_default
   module:
+    - filter
     - system
 _core:
   default_config_hash: dJ0L2DNSj5q6XVZAGsuVDpJTh5UeYkIPwKrUOOpr8YI
@@ -12,3 +15,4 @@ weight: 1
 is_admin: false
 permissions:
   - 'access content'
+  - 'use text format webform_default'
