--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "drupal/group": "^3.3",
         "drupal/hook_event_dispatcher": "^4.2",
         "drupal/hux": "^1.7",
+        "drupal/openid_connect": "dev-3452009-drupal-11-compatibility",
         "drupal/webform": "^6.0@dev",
-        "drupal/openid_connect": "dev-3433705-3.x",
         "drush/drush": "^13.2"
     },
     "require-dev": {
@@ -43,7 +43,7 @@
         },
         {
             "type": "git",
-            "url": "https://git.drupalcode.org/issue/openid_connect-3433705.git"
+            "url": "https://git.drupalcode.org/issue/openid_connect-3452009.git"
         }
     ],
     "minimum-stability": "dev",
