--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,8 +1,9 @@
 _core:
   default_config_hash: 4GIX5Esnc_umpXUBj4IIocRX7Mt5fPhm4AgXfE3E56E
 module:
-  ai_screening_project_track: 0
+  ai_screening: 0
   ai_screening_project: 0
+  ai_screening_project_track: 0
   block: 0
   breakpoint: 0
   contextual: 0
@@ -18,6 +19,7 @@ module:
   gnode: 0
   group: 0
   hook_event_dispatcher: 0
+  hux: 0
   language: 0
   layout_builder: 0
   layout_discovery: 0
