--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     },
     "require-dev": {
         "drupal/core-dev": "^11.0",
+        "drupal/webprofiler": "^11.0",
         "ergebnis/composer-normalize": "^2.43",
         "mglaman/phpstan-drupal": "^1.1",
         "phpstan/extension-installer": "^1.2",
