Added custom events

--- a/web/modules/custom/ai_screening/ai_screening.info.yml
+++ b/web/modules/custom/ai_screening/ai_screening.info.yml
@@ -7,3 +7,4 @@ dependencies:
   - drupal:user
   - hux:hux
   - openid_connect:openid_connect
+  - openid_connect_event_dispatcher:openid_connect_event_dispatcher
