--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -31,6 +31,18 @@ tasks:
       - task composer -- install
       - task drush -- site-install --existing-config --yes
 
+  theme-build:
+    desc: "Build theme"
+    cmds:
+      - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
+      - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
+
+  theme-watch:
+    desc: "Build theme and watch for changes"
+    cmds:
+      - task theme-build
+      - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme watch
+
   simulate-github-actions:
     cmds:
       - task composer -- normalize
