--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -8,6 +8,7 @@ module:
   breakpoint: 0
   contextual: 0
   core_event_dispatcher: 0
+  custom_event_dispatcher: 0
   dblog: 0
   dynamic_page_cache: 0
   entity: 0
@@ -19,7 +20,6 @@ module:
   gnode: 0
   group: 0
   hook_event_dispatcher: 0
-  hux: 0
   language: 0
   layout_builder: 0
   layout_discovery: 0
