--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,6 +4,9 @@ include:
 services:
   node:
     image: node:20
+    profiles:
+      # Used only to build assets
+      - dev
     working_dir: /app
     volumes:
       - .:/app:delegated
