--- a/web/modules/custom/ai_screening_fixtures_base/ai_screening_fixtures_base.services.yml
+++ b/web/modules/custom/ai_screening_fixtures_base/ai_screening_fixtures_base.services.yml
@@ -1,6 +1,6 @@
 services:
   Drupal\ai_screening_fixtures_base\Helper\Helper:
-    arguments:
+    autowire: true
       - '@extension.path.resolver'
       - '@file.repository'
       - '@file_system'
