--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -22,10 +22,12 @@ tasks:
     silent: true
 
   build-site:new:
+    desc: "Build a new site"
     cmds:
        - task drush -- site:install minimal -y
 
   build-site:existing-conf:
+    desc: "Build the site using existing configuration from the config/sync folder"
     cmds:
       - task compose -- up --detach
       - task composer -- install
@@ -44,23 +46,27 @@ tasks:
       - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme watch
 
   simulate-github-actions:
+    desc: "Simulate most github actions to prepare the code and catch errors before github does"
     cmds:
       - task composer -- normalize
       - task check-code
 
   check-code:
+    desc: "Check coding standards"
     cmds:
       - docker run --rm --volume "$PWD:/md" peterdavehello/markdownlint markdownlint $(git ls-files *.md)
       - task composer -- code-analysis
       - task composer -- coding-standards-check/twig-cs-fixer
 
   apply-fixtures:
+    desc: "Apply fixtures"
     cmds:
       - task drush -- pm:install ai_screening_fixtures_base
       - task drush -- content-fixtures:load -y
       - task drush -- pm:uninstall ai_screening_fixtures_base content_fixtures
 
   apply-fixtures-groups:
+    desc: "Apply one or more groups of fixtures"
     cmds:
       - task drush -- pm:install ai_screening_fixtures_base
       - task drush -- content-fixtures:load --groups={{.FIXTURE_GROUPS}} -y
