--- a/config/sync/core.entity_form_display.taxonomy_term.project_track_type.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.project_track_type.default.yml
@@ -13,16 +13,16 @@ bundle: project_track_type
 mode: default
 content:
   description:
-    type: text_textfield
-    weight: 0
+    type: text_textarea
+    weight: 1
     region: content
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
   field_webform:
     type: entity_reference_autocomplete
-    weight: 101
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
@@ -30,26 +30,14 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  langcode:
-    type: language_select
-    weight: 2
-    region: content
-    settings:
-      include_locked: true
-    third_party_settings: {  }
   name:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    weight: 100
-    region: content
-    settings:
-      display_label: true
-    third_party_settings: {  }
-hidden: {  }
+hidden:
+  langcode: true
+  status: true
