--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -6,11 +6,13 @@ module:
   ai_screening_project_track: 0
   block: 0
   breakpoint: 0
+  ckeditor5: 0
   contextual: 0
   core_event_dispatcher: 0
   custom_event_dispatcher: 0
   dblog: 0
   dynamic_page_cache: 0
+  editor: 0
   entity: 0
   field: 0
   field_ui: 0
