--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -3,16 +3,24 @@ langcode: en
 status: true
 dependencies:
   config:
+    - filter.format.simple_editor
     - filter.format.webform_default
+    - node.type.project
   module:
     - filter
+    - node
     - system
 _core:
   default_config_hash: dJ0L2DNSj5q6XVZAGsuVDpJTh5UeYkIPwKrUOOpr8YI
 id: authenticated
-label: 'Authenticated user'
+label: 'Godkendt bruger'
 weight: 1
 is_admin: false
 permissions:
   - 'access content'
+  - 'access user profiles'
+  - 'create project content'
+  - 'use text format simple_editor'
   - 'use text format webform_default'
+  - 'view own unpublished content'
+  - 'view user email addresses'
