--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -1,9 +1,13 @@
 uuid: 2297cf1c-ce4a-4d92-9397-9ff95de7c98a
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - webform
 id: editor
 label: Editor
 weight: 2
 is_admin: null
-permissions: {  }
+permissions:
+  - 'access webform help'
+  - 'edit any webform'
