Added Drush commands

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -38,7 +38,9 @@ tasks:
   drush:
     desc: "Run Drush command. Example: task drush -- user:login"
     cmds:
-      - task compose-exec -- phpfpm vendor/bin/drush --uri={{.URI}} {{ .CLI_ARGS }}
+      # Notice: To make debugging (with Xdebug) work, we have to call
+      # vendor/bin/drush.php directly (and not vendor/bin/drush)
+      - task compose-exec -- phpfpm vendor/bin/drush.php --uri={{.URI}} {{ .CLI_ARGS }}
     vars:
       URI:
         sh: task site-url
