--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -23,7 +23,9 @@ module:
   language: 0
   layout_builder: 0
   layout_discovery: 0
+  link: 0
   locale: 0
+  menu_link_content: 0
   mysql: 0
   navigation: 0
   node: 0
